name:                sandbox
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/dfordivam/sandbox#readme
license:             BSD3
license-file:        LICENSE
author:              Divam
maintainer:          dfordivam@gmail.com
copyright:           All rights reserved.
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable sandbox
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
